more content and style bugs squashed

--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -616,10 +616,6 @@ video {
   display: table !important;
 }
 
-.contents {
-  display: contents !important;
-}
-
 .hidden {
   display: none !important;
 }
@@ -741,6 +737,10 @@ video {
   outline-width: 2px !important;
 }
 
+.outline-4 {
+  outline-width: 4px !important;
+}
+
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow) !important;
 }
@@ -772,6 +772,7 @@ svg {
   font-size: 1.5rem;
   line-height: 2rem;
   font-style: italic;
+  line-height: 1.625;
   --tw-text-opacity: 1;
   color: rgb(102 92 84 / var(--tw-text-opacity));
 }
@@ -1571,6 +1572,12 @@ hr {
   color: rgb(80 73 69 / var(--tw-text-opacity));
 }
 
+.intro > div > p > a {
+  --tw-text-opacity: 1;
+  color: rgb(69 133 136 / var(--tw-text-opacity));
+  text-decoration-line: none;
+}
+
 .sidebar {
   position: sticky;
   top: 1.5rem;
@@ -1806,12 +1813,12 @@ h2, h3, h4, h5, h6, h7 {
 }
 
 h4 {
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 h5 {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
